(Changes by Jayesh) New catalogue names for catalog.dat

--- a/example.config
+++ b/example.config
@@ -126,3 +126,4 @@ CATALOG_OUT:       example/catalog.dat	    	    # Sampled galaxy catalog w/ erro
 
 # Catalog columns, options are > (theta or dec) (phi or ra) z r galtype kappa gamma1 gamma2 ellip1 ellip2 pixel maskbit
 CATALOG_COLS: ra dec z kappa gamma1 gamma2 ellip1 ellip2
+CAT_COL_NAMES: This is a custom header for the catalog column names
