Option added to use shear instead of reduced shear in calculating ellipticities

--- a/example.config
+++ b/example.config
@@ -48,7 +48,7 @@ WINFUNC_SIGMA:     -1				    # Std. Dev. (arcmin) of field Gaussian smoothing, a
 APPLY_PIXWIN:      1				    # Apply (1) or not (0) Healpix pixel window function to C(l)s.
 SUPPRESS_L:        -1000		            # l scale for generic exponential suppression of C(l), set <0 for none.
 SUP_INDEX:         -6			            # Index for the exponential suppression, exp(-(l/SUPPRESS_L)^SUP_INDEX), <0 for none.
-
+REDUCED_SHEAR:     0                        # Whether to use reduced shear for calculating the observed ellipticities. 1 (reduced shear - default value if this line is missing); 0 (shear)
 
 ### Survey selection function ###
 
@@ -97,7 +97,6 @@ MMAX_OUT:	   -1 				    # Truncate m for alm output at this value. Set it to <0 
 ANGULAR_COORD:     2				    # 0 - ThetaPhi in radians 1 - ThetaPhi in degrees 2 - RADEC in degrees.
 DENS2KAPPA:        0				    # Integrate (1) or not (0) density to obtain convergence.
 
-FITS_WRITE_FORMAT: BINARY               # Acceptable values: ASCII or BINARY. If this line is missing, ASCII is assumed.
 FLIST_OUT:         0 ./field-list.dat		    # File to write the order of fields in covariance matrices. Write 0 for no output.
 SMOOTH_CL_PREFIX:  example/pixwinCl-                # Prefix for C(l)s smoothed by Gaussian window function with WINFUNC_SIGMA.
 XIOUT_PREFIX:      example/Xi-			    # Prefix of output files for the correlation functions. Write 0 for no output.
@@ -128,5 +127,5 @@ CATALOG_OUT:       example/catalog.fits    	    # Sampled galaxy catalog w/ erro
 # Catalog columns, options are > (theta or dec) (phi or ra) z r galtype kappa gamma1 gamma2 ellip1 ellip2 pixel maskbit
 CATALOG_COLS: ra dec z kappa gamma1 gamma2 ellip1 ellip2
 CAT_COL_NAMES: head-ra head-dec head-z head-kappa head-gamma1 head-gamma2 head-ellip1 head-ellip2
-CAT32BIT:          1                 # Whether to write floating point numbers in 32-bits in the FITS-format catalogue. 1: 32-bits. 0: 64-bits. Default assumed to be 0 (64-bits) if this line is missing.
+CAT32BIT:          1                 # Whether to write floating point numbers in 32-bits in the FITS-format catalogue. 1 (32-bits); 0 (64-bits). Default assumed to be 0 (64-bits) if this line is missing.
 
