Slight change to the comments banner at the top
The comments banner now says there are "very few" hard-wired default values in the code. Earlier it said there were "no" hard-wired defaults.

--- a/example.config
+++ b/example.config
@@ -11,7 +11,7 @@
 #   completely arbitrary and chosen for aesthetic reasons.          #
 #                                                                   #
 # - All parameters used by the program should be listed here since  # 
-#   there are no hard-wired default values.                         #
+#   there are very few hard-wired default values.                   #
 # - Addition/removal/modification of parameters in this file must   #
 #   be followed by a modification of ParDef namespace in the        #
 #   ParameterList.hpp file.                                         #
