don't parse config file as string to get option

--- a/example.config
+++ b/example.config
@@ -48,7 +48,7 @@ WINFUNC_SIGMA:     -1				    # Std. Dev. (arcmin) of field Gaussian smoothing, a
 APPLY_PIXWIN:      1				    # Apply (1) or not (0) Healpix pixel window function to C(l)s.
 SUPPRESS_L:        -1000		            # l scale for generic exponential suppression of C(l), set <0 for none.
 SUP_INDEX:         -6			            # Index for the exponential suppression, exp(-(l/SUPPRESS_L)^SUP_INDEX), <0 for none.
-REDUCED_SHEAR:     0                        # Whether to use reduced shear for calculating the observed ellipticities. 1 (reduced shear - default value if this line is missing); 0 (shear)
+REDUCED_SHEAR:     1                        # Whether to use shear (0) or reduced shear (1) for calculating the observed ellipticities.
 
 ### Survey selection function ###
 
