--- a/example.ini
+++ b/example.ini
@@ -69,8 +69,8 @@ APPLY_PIXWIN=      1
 SUPPRESS_L=        -1000		           
 ; Index for the exponential suppression, exp(-(l/SUPPRESS_L)^SUP_INDEX), <0 for none.
 SUP_INDEX=         -6			           
-; Whether to use reduced shear for calculating the observed ellipticities. 1 (reduced shear - default value if this line is missing); 0 (shear)
-REDUCED_SHEAR=     0
+; Whether to use shear (0) or reduced shear (1) for calculating the observed ellipticities.
+REDUCED_SHEAR=     1
 
 [Survey selection function]
 
