FITS header and prec without scanning entire file

--- a/example.ini
+++ b/example.ini
@@ -200,6 +200,7 @@ CATALOG_OUT=       example/catalog.fits
 
 ; Catalog columns, options are > (theta or dec) (phi or ra) z r galtype kappa gamma1 gamma2 ellip1 ellip2 pixel maskbit
 CATALOG_COLS= ra dec z kappa gamma1 gamma2 ellip1 ellip2
-CAT_COL_NAMES= AB1 CDE12 F123 GHIJK1234 LMNOPQ12345 RSTUVW123456 XYZabc1234567 defghi12345678
-;Whether to write floating point numbers in 32-bits in the FITS-format catalogue. 1 (32-bits); 0 (64-bits). Default assumed to be 0 (64-bits) if this line is missing.
-CAT32BIT=          1
+; Custom catalogue header names. Leave empty for default header.
+CAT_COL_NAMES=
+; Whether to write floating point numbers as double (0) or single (1) precision in the FITS-format catalogue.
+CAT32BIT=          0
