--- a/example.config
+++ b/example.config
@@ -49,6 +49,7 @@ APPLY_PIXWIN:      1				    # Apply (1) or not (0) Healpix pixel window function
 SUPPRESS_L:        -1000		            # l scale for generic exponential suppression of C(l), set <0 for none.
 SUP_INDEX:         -6			            # Index for the exponential suppression, exp(-(l/SUPPRESS_L)^SUP_INDEX), <0 for none.
 REDUCED_SHEAR:     1                        # Whether to use shear (0) or reduced shear (1) for calculating the observed ellipticities.
+SUPPRESS_VAR:      0                        # Suppress variance of the random fields (1) or not (0).
 
 ### Survey selection function ###
 
