fix test02.config and test03.config

--- a/tests/test02.config
+++ b/tests/test02.config
@@ -48,6 +48,7 @@ WINFUNC_SIGMA:     20.0			    	    # Std. Dev. (arcmin) of field Gaussian smooth
 APPLY_PIXWIN:      0				    # Apply (1) or not (0) Healpix pixel window function to C(l)s.
 SUPPRESS_L:        -1000		            # l scale for generic exponential suppression of C(l), set <0 for none.
 SUP_INDEX:         -6			            # Index for the exponential suppression, exp(-(l/SUPPRESS_L)^SUP_INDEX), <0 for none.
+REDUCED_SHEAR:     1			            # Whether to use reduced shear for calculating the observed ellipticities. 1 (reduced shear - default value if this line is missing); 0 (shear)
 
 
 ### Survey selection function ###
@@ -123,6 +124,9 @@ ELLIP_MAP_OUT:	   0 example/ellip-map.dat	    # Text file output for galaxies el
 ELLIPFITS_PREFIX:  0 example/ellip-map-		    # Prefix for Healpix map .fits files of galaxies ellipticities. Write 0 for no output.
 CATALOG_OUT:       0 example/catalog.dat    	    # Sampled galaxy catalog w/ errors (possible extensions are .dat, .fits, .fits.gz).
 
+CAT32BIT:          0
+
 
 # Catalog columns, options are > (theta or dec) (phi or ra) z r galtype kappa gamma1 gamma2 ellip1 ellip2 pixel maskbit
 CATALOG_COLS: ra dec z r galtype pixel maskbit
+CAT_COL_NAMES: ra dec z r galtype pixel maskbit
