sanitise config file handling

--- a/example.config
+++ b/example.config
@@ -48,7 +48,7 @@ WINFUNC_SIGMA:     -1				    # Std. Dev. (arcmin) of field Gaussian smoothing, a
 APPLY_PIXWIN:      1				    # Apply (1) or not (0) Healpix pixel window function to C(l)s.
 SUPPRESS_L:        -1000		            # l scale for generic exponential suppression of C(l), set <0 for none.
 SUP_INDEX:         -6			            # Index for the exponential suppression, exp(-(l/SUPPRESS_L)^SUP_INDEX), <0 for none.
-REDUCED_SHEAR:     0                        # Whether to use reduced shear for calculating the observed ellipticities. 1 (reduced shear - default value if this line is missing); 0 (shear)
+REDUCED_SHEAR:     1                        # Whether to use shear (0) or reduced shear (1) for calculating the observed ellipticities.
 
 ### Survey selection function ###
 
@@ -126,6 +126,7 @@ CATALOG_OUT:       example/catalog.fits    	    # Sampled galaxy catalog w/ erro
 
 # Catalog columns, options are > (theta or dec) (phi or ra) z r galtype kappa gamma1 gamma2 ellip1 ellip2 pixel maskbit
 CATALOG_COLS: ra dec z kappa gamma1 gamma2 ellip1 ellip2
-CAT_COL_NAMES: head-ra head-dec head-z head-kappa head-gamma1 head-gamma2 head-ellip1 head-ellip2
-CAT32BIT:          1                 # Whether to write floating point numbers in 32-bits in the FITS-format catalogue. 1 (32-bits); 0 (64-bits). Default assumed to be 0 (64-bits) if this line is missing.
-
+# Custom catalogue header names. Leave empty for default header.
+CAT_COL_NAMES:
+# Whether to write floating point numbers as double (0) or single (1) precision in the FITS-format catalogue.
+CAT32BIT:          0
