set ultra-slow outputs to 0 by default

--- a/example.config
+++ b/example.config
@@ -110,14 +110,14 @@ AUXALM_OUT:        0 example/aux-alm.dat	    # File output for auxiliary alm's. 
 RECOVAUXCLS_OUT:   0 example/recov-gCl.dat	    # Cls estimated from auxiliary alm's. Write 0 for no output.
 AUXMAP_OUT:        0 example/aux-map.dat	    # Text file output for pixel values before exponentiating or adding mean.
 DENS2KAPPA_STAT:   0 				    # Statistics of integrated densities, 0 - Ignore; 1 - Print to screen; or <filename>.
-MAP_OUT:           example/map.dat		    # Text file output of pixel coordinates and field values, after exponentiation.
+MAP_OUT:           0 example/map.dat		    # Text file output of pixel coordinates and field values, after exponentiation.
 MAPFITS_PREFIX:	   example/map-			    # Prefix for the map .fits files. Write 0 for no output.   
 RECOVALM_OUT:      0 example/recov-alm.dat	    # File output for recovered alm's from MAP_OUT. Write 0 for no output.
 RECOVCLS_OUT:      example/recovCls.dat		    # File output for Cl's calculated from the recovered alm's. Write 0 for no output.
 SHEAR_ALM_PREFIX:  0 example/shear-Elm-		    # Prefix for shear (E-mode) alm's output, calculated from convergence.
 SHEAR_FITS_PREFIX: 0 example/kappa-gamma-	    # Prefix for lensing map (kappa, gamma1, gamma2) FITS files.
-SHEAR_MAP_OUT:     example/shearmap.dat	    	    # File output of shear as a TEXT table.
-MAPWER_OUT:        example/poisson-map.dat	    # Text file output of pixel coordinates and field values, after mask & Poisson noise.
+SHEAR_MAP_OUT:     0 example/shearmap.dat	    	    # File output of shear as a TEXT table.
+MAPWER_OUT:        0 example/poisson-map.dat	    # Text file output of pixel coordinates and field values, after mask & Poisson noise.
 MAPWERFITS_PREFIX: example/poisson-map-		    # Prefix for the map .fits files, same data as above. Write 0 for no output.   
 ELLIP_MAP_OUT:	   0 example/ellip-map.dat	    # Text file output for galaxies ellipticities (reduced shear + shape noise).
 ELLIPFITS_PREFIX:  example/ellip-map-		    # Prefix for Healpix map .fits files of galaxies ellipticities. Write 0 for no output.
